--- a/pos_order_to_sale_order/views/view_res_config_settings.xml
+++ b/pos_order_to_sale_order/views/view_res_config_settings.xml
@@ -9,43 +9,43 @@
             <xpath expr="//div[@id='pos_technical_section']" position="after">
 
                 <h2 name="create_sale_order">Sale Order Creation</h2>
-                <div class="row mt16 o_settings_container">
-                    <div class="col-12 col-lg-6 o_setting_box">
-                        <div class="o_setting_left_pane">
+                <block class="row mt16">
+                    <setting class="col-12 col-lg-6 o_setting_box">
+                        <setting>
                             <field name="pos_iface_create_draft_sale_order" />
-                        </div>
-                        <div class="o_setting_right_pane">
+                        </setting>
+                        <setting>
                             <label for="pos_iface_create_draft_sale_order" />
-                        </div>
-                    </div>
+                        </setting>
+                    </setting>
 
-                    <div class="col-12 col-lg-6 o_setting_box">
-                        <div class="o_setting_left_pane">
+                    <setting class="col-12 col-lg-6">
+                        <setting>
                             <field name="pos_iface_create_confirmed_sale_order" />
-                        </div>
-                        <div class="o_setting_right_pane">
+                        </setting>
+                        <setting>
                             <label for="pos_iface_create_confirmed_sale_order" />
-                        </div>
-                    </div>
+                        </setting>
+                    </setting>
 
-                    <div class="col-12 col-lg-6 o_setting_box">
-                        <div class="o_setting_left_pane">
+                    <setting class="col-12 col-lg-6">
+                        <setting>
                             <field name="pos_iface_create_delivered_sale_order" />
-                        </div>
-                        <div class="o_setting_right_pane">
+                        </setting>
+                        <setting>
                             <label for="pos_iface_create_delivered_sale_order" />
-                        </div>
-                    </div>
+                        </setting>
+                    </setting>
 
-                    <div class="col-12 col-lg-6 o_setting_box">
-                        <div class="o_setting_left_pane">
+                    <setting class="col-12 col-lg-6">
+                        <setting>
                             <field name="pos_iface_create_invoiced_sale_order" />
-                        </div>
-                        <div class="o_setting_right_pane">
+                        </setting>
+                        <setting>
                             <label for="pos_iface_create_invoiced_sale_order" />
-                        </div>
-                    </div>
-                </div>
+                        </setting>
+                    </setting>
+                </block>
             </xpath>
         </field>
     </record>
